Add area-labels to links and buttons

--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -17,8 +17,8 @@
         Are you sure you want to remove this item from your basket?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <a id="confirm-remove-btn" href="#" class="btn btn-danger">Remove</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Cancel">Cancel</button>
+        <a id="confirm-remove-btn" href="#" class="btn btn-danger" aria-label="Remove">Remove</a>
       </div>
     </div>
   </div>
@@ -54,9 +54,9 @@
                 {% csrf_token %}
                 <input type="hidden" name="basket_item_id" value="{{ item.id }}">
                 <input id="quantity_{{ item.id }}" type="number" class="form-control qty" name="quantity" value="{{ item.quantity }}" min="1" max="10">
-                <button class="btn btn-outline-secondary btn-qty" type="button" onclick="decreaseQuantity('{{ item.id }}')"><strong>-</strong></button>
-                <button class="btn btn-outline-secondary btn-qty" type="button" onclick="increaseQuantity('{{ item.id }}')"><strong>+</strong></button>
-                <button type="submit" name="action" value="update" style="display:none"></button>
+                <button aria-label="decrease quantity" class="btn btn-outline-secondary btn-qty" type="button" onclick="decreaseQuantity('{{ item.id }}')"><strong>-</strong></button>
+                <button aria-label="increase quantity" class="btn btn-outline-secondary btn-qty" type="button" onclick="increaseQuantity('{{ item.id }}')"><strong>+</strong></button>
+                <button type="submit" name="action" value="update" aria-label="hidden button" class="d-none"></button>
               </form>
             </td>
             <td>
@@ -68,7 +68,7 @@
             </td>
             <td>
               <div style="display: flex; flex-direction: column; align-items: center;">
-                <a href="#" class="text-dark" data-toggle="modal" data-target="#confirmRemoveModal" data-item-id="{{ item.id }}">
+                <a href="#" class="text-dark" data-toggle="modal" data-target="#confirmRemoveModal" data-item-id="{{ item.id }}" aria-label="remove item">
                   <i class="fa-solid fa-trash-can"></i>
                 </a>
                 <small class="btn-remove text-muted">Remove</small>
@@ -89,9 +89,9 @@
     <div class="m-3 text-left">
       <p><strong>Total: </strong>${{ basket_total }}</p>
       {% if basket_items %}
-      <a href="{% url 'checkout' %}" class="btn btn-checkout my-2">Secure Checkout <span class="icon"><i class="fas fa-lock"></i></span></a>
+      <a href="{% url 'checkout' %}" aria-label="go to checkout page" class="btn btn-checkout my-2">Secure Checkout <span class="icon"><i class="fas fa-lock"></i></span></a>
       {% endif %}
-      <a href="{% url 'products' %}" class="btn btn-checkout my-2">Continue Shopping <span><i class="fa-solid fa-angles-right"></i></span></a>
+      <a href="{% url 'products' %}" aria-label="go to all products page" class="btn btn-checkout my-2">Continue Shopping <span><i class="fa-solid fa-angles-right"></i></span></a>
     </div>
   </div>
 </div>
