--- a/catalog/templates/home/add_product.html
+++ b/catalog/templates/home/add_product.html
@@ -22,7 +22,7 @@
           {{ candle_form.burn_time | as_crispy_field }}
           {{ candle_form.is_available | as_crispy_field }}
         </fieldset>
-        <button type="submit" class="btn btn-primary mt-3">Submit</button>
+        <button type="submit" class="btn btn-primary mt-3" aria-label="submit the form">Submit</button>
       </form>
     </div>
     <div class="col-md-6">
@@ -40,7 +40,7 @@
           {{ oil_form.volume | as_crispy_field }}
           {{ oil_form.is_available | as_crispy_field }}
         </fieldset>
-        <button type="submit" class="btn btn-primary mt-3">Submit</button>
+        <button type="submit" class="btn btn-primary mt-3" aria-label="submit the form">Submit</button>
       </form>
     </div>
   </div>
