--- a/catalog/templates/home/product_details.html
+++ b/catalog/templates/home/product_details.html
@@ -52,8 +52,8 @@
             {% endif %}
             {% if request.user.is_authenticated and request.user.is_superuser %}
             <div class="mt-3">
-                <a href="{% url 'edit_product' product.id %}" class="btn btn-primary">Edit</a>
-                <a href="{% url 'delete_product' product.id %}" class="btn btn-danger">Delete</a>
+                <a href="{% url 'edit_product' product.id %}" aria-label="go to this product's edit page" class="btn btn-primary">Edit</a>
+                <a href="{% url 'delete_product' product.id %}" aria-label="delete this product" class="btn btn-danger">Delete</a>
             </div>
             {% endif %}
         </div>
