--- a/catalog/templates/home/products.html
+++ b/catalog/templates/home/products.html
@@ -31,7 +31,7 @@
     </div>
     <div class="col-12 col-md-6 order-md-first">
       <p class="text-muted mt-3 text-center text-md-left">
-        <a href="{% url 'products' %}">All products</a> |
+        <a href="{% url 'products' %}" aria-label="link to all products page">All products</a> |
         {{ products|length }} Products.
       </p>
     </div>
@@ -42,7 +42,7 @@
     {% for product in products %}
     <div class="col mb-5">
       <div class="card h-100">
-        <a href="{% url 'product_details' product.id %}">
+        <a href="{% url 'product_details' product.id %}" aria-label="link to this product's detail page">
           <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
           <h5 class="card-title py-3 text-dark text-center">{{ product.name }}</h5>
         </a>
@@ -81,7 +81,7 @@
 
 </div>
 <div class="btt-button shadow-sm rounded-0 border border-black">
-  <a class="btt-link d-flex h-100">
+  <a class="btt-link d-flex h-100" aria-label="go to the top of the page">
     <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
   </a>
 </div>
