--- a/checkout/templates/checkout/order_detail.html
+++ b/checkout/templates/checkout/order_detail.html
@@ -163,13 +163,13 @@
   </div>
   <div class="row mb-5 mt-3">
     <div class="col-12 col-lg-7">
-      <a href="{% url 'profile' %}" class="btn btn-checkout">
+      <a href="{% url 'profile' %}" class="btn btn-checkout" aria-label="go to profile">
         <span class="icon mr-2">
           <i class="fas fa-angle-left"></i>
         </span>
         <span class="text-uppercase">Go to Profile</span>
       </a>
-      <a href="{% url 'order_history' %}" class="btn btn-checkout text-uppercase float-right">Order history</a>
+      <a href="{% url 'order_history' %}" class="btn btn-checkout text-uppercase float-right" aria-label="order history">Order history</a>
     </div>
   </div>
 </div>
