Change images links

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -99,6 +99,8 @@ footer a {
 }
 
 .card-img-top {
+    width: 100%;
+    height: 300px;
     object-fit: cover;
 }
 
@@ -118,7 +120,6 @@ footer a {
     background-color: white;
     color: rgb(33, 52, 58);
     border: 1px solid black !important;
-    width: fit-content;
 }
 
 .btn-checkout:hover {
@@ -134,7 +135,6 @@ footer a {
     font: 14px Helvetica, Arial, sans-serif;
     width: 600px;
 }
-
 
 /* ********** BOOTSTRAP TOASTS *********** */
 
