--- a/templates/includes/desktop-top-header.html
+++ b/templates/includes/desktop-top-header.html
@@ -1,16 +1,16 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'candles' %}">Candles</a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'candles' %}" aria-label="candles page">Candles</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'essential_oils' %}">Essential Oils</a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'essential_oils' %}" aria-label="oils page">Essential Oils</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'specials' %}">Specials</a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'specials' %}" aria-label="specials page">Specials</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'products' %}">All products</a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'products' %}" aria-label="all products page">All products</a>
         </li>
     </ul>
 </div>
