--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -6,8 +6,8 @@
 <section class="hero">
     <div class="container container-hero">
         <h1 class="hero-text">Welcome to our candle and essential oils store</h1>
-        <h4 class="py-3 hero-text hero-subtext">Shop from our selection of hand-poured candles and pure essential oils</h4>
-        <h4><span class="hero-text hero-subtext">Check out our latest</span> <a href="{% url 'specials' %}" aria-label="Link to specials page" class="btn btn-checkout p-2 hero-button">Offers</a></h4>
+        <h3 class="py-3 hero-text hero-subtext">Shop from our selection of hand-poured candles and pure essential oils</h3>
+        <h3><span class="hero-text hero-subtext">Check out our latest</span> <a href="{% url 'specials' %}" aria-label="Link to specials page" class="btn btn-checkout p-2 hero-button">Offers</a></h3>
     </div>
 </section>
 
@@ -17,7 +17,7 @@
         <div class="row p-2">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}pexels-photo-6311974.jpeg" class="card-img-top" width="200" height="150"
+                    <img src="{{ MEDIA_URL }}candles-image.jpeg" class="card-img-top"
                         alt="Candles">
                     <div class="card-body">
                         <h4 class="card-title">Candles</h4>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}pexels-photo-932577.jpeg" class="card-img-top" width="200" height="150"
+                    <img src="{{ MEDIA_URL }}oils-image.jpeg" class="card-img-top"
                         alt="Essential Oils">
                     <div class="card-body">
                         <h4 class="card-title">Essential Oils</h4>
