--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Shop for high-quality candles and essential oils at our online store. We offer a wide selection of scents to suit any taste.">
-  <meta name="keywords" content="aromatherapy, scents, hand-made candles, scented candles, natural candles, soy candles, tea lights,
+  <meta name="keywords" content="liquid smoke, aromatherapy, scents, hand-made candles, scented candles, natural candles, soy candles, tea lights,
      essential oil blends, diffusers, massage oils, body oils, home fragrance, relaxation, wellness">
 
   <meta name="author" content="Liquid Smoke">
@@ -19,9 +19,11 @@
   {% endblock %}
 
   {% block corecss %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
   <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -183,7 +185,7 @@
                   name="b_66ded1542002e4945d4cc9bfe_f535030be4" tabindex="-1" value=""></div>
               <div class="optionalParent">
                 <div class="clear foot">
-                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-checkout w-10">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button bg-nav">
                   <p class="brandingLogo"><a href="http://eepurl.com/ipHWb-"
                       title="Mailchimp - email marketing made easy and fun"><img
                         src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a>
