Create graphviz models diagram

--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -17,7 +17,7 @@
         <div class="row p-2">
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}candles-image.jpeg" class="card-img-top"
+                    <img src="/media/candles-image.jpeg" class="card-img-top"
                         alt="Candles">
                     <div class="card-body">
                         <h4 class="card-title">Candles</h4>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-6">
                 <div class="card">
-                    <img src="{{ MEDIA_URL }}oils-image.jpeg" class="card-img-top"
+                    <img src="/media/oils-image.png" class="card-img-top"
                         alt="Essential Oils">
                     <div class="card-body">
                         <h4 class="card-title">Essential Oils</h4>
