--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -9,7 +9,7 @@
         <div class="my-5">
             <h4>
                 <a href="{% url 'home' %}" 
-                    class="btn btn-checkout text-uppercase">
+                    class="btn btn-checkout text-uppercase" aria-label="return to shop">
                         Return to shop
                 </a>
             </h4>
