Document Landing page testing in README.md

--- a/catalog/templates/home/specials.html
+++ b/catalog/templates/home/specials.html
@@ -26,7 +26,7 @@
           <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
           <h5 class="card-title py-3 text-dark text-center">{{ product.name }}</h5>
         </a>
-        <p class="text-center"><small class="text-muted">Price: <del>${{ product.price }}</del> <span
+        <p class="text-center"><small class="text-muted"><del>${{ product.price }}</del> <span
               class="discount">${{ product.discounted_price }}</span></small></p>
         <p class="text-muted text-center">
           <i class="fas fa-star mr-1"></i>
