--- a/templates/base.html
+++ b/templates/base.html
@@ -130,10 +130,6 @@
     </div>
   </header>
 
-
-
-
-
   {% if messages %}
   <div class="message-container">
     {% for message in messages %}
@@ -155,7 +151,7 @@
   {% block content %}
   {% endblock %}
 
-  <footer class="footer bg-nav mt-auto py-3">
+  <footer class="footer bg-nav mt-5 py-3">
     <div class="container">
       <div class="row">
         <div class="col-md-12" id="mc_embed_signup">
