Document the products/product detail/edit/delete pages in README.md

--- a/basket/templates/basket/view_basket.html
+++ b/basket/templates/basket/view_basket.html
@@ -67,7 +67,7 @@
               {% endif %}
             </td>
             <td>
-              <div style="display: flex; flex-direction: column; align-items: center;">
+              <div class="basket-remove">
                 <a href="#" class="text-dark" data-toggle="modal" data-target="#confirmRemoveModal" data-item-id="{{ item.id }}" aria-label="remove item">
                   <i class="fa-solid fa-trash-can"></i>
                 </a>
