--- a/catalog/templates/home/product_details.html
+++ b/catalog/templates/home/product_details.html
@@ -5,6 +5,26 @@
 {% block extra_title %}Product details{% endblock %}
 
 {% block content %}
+<div class="modal fade" id="confirmRemoveModal" tabindex="-1" role="dialog" aria-labelledby="confirmRemoveModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmRemoveModalLabel">Confirm Delete Item</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to permanently delete this item?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Cancel">Cancel</button>
+        <a id="confirm-remove-btn" href="{% url 'delete_product' product.id %}" class="btn btn-danger" aria-label="Remove">Delete</a>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
@@ -12,18 +32,10 @@
         </div>
         <div class="col-md-6">
             <h1>{{ product.name }}</h1>
-            <p>{{ product.description }}</p>
-            {% if product.candle %}
-            <p class="card-text">Scent: {{ product.candle.scent }}</p>
-            <p class="card-text">Burn Time: {{ product.candle.burn_time }}</p>
-            {% elif product.essentialoil %}
-            <p class="card-text">Scent: {{ product.essentialoil.scent }}</p>
-            <p class="card-text">Volume: {{ product.essentialoil.volume }}</p>
-            {% endif %}
             {% if product.discounted_price %}
-            <del>${{ product.price }}</del> <span class="discount">${{ product.discounted_price }}</span>
+            <p>Price: <del>${{ product.price }}</del> <span class="discount">${{ product.discounted_price }}</span></p>
             {% else %}
-            ${{ product.price }}
+            <p>Price: ${{ product.price }}</p>
             {% endif %}
             <p class="text-muted">
                 <i class="fas fa-star mr-1"></i>
@@ -33,6 +45,14 @@
                 No rating
                 {% endif %}
             </p>
+            <p>{{ product.description }}</p>
+            {% if product.candle %}
+            <p class="card-text">Scent: {{ product.candle.scent }}</p>
+            <p class="card-text">Burn Time: {{ product.candle.burn_time }}</p>
+            {% elif product.essentialoil %}
+            <p class="card-text">Scent: {{ product.essentialoil.scent }}</p>
+            <p class="card-text">Volume: {{ product.essentialoil.volume }}</p>
+            {% endif %}
             {% if request.user.is_authenticated %}
             <form method="POST" action="{% url 'add_to_basket' product.id %}">
                 {% csrf_token %}
@@ -53,7 +73,7 @@
             {% if request.user.is_authenticated and request.user.is_superuser %}
             <div class="mt-3">
                 <a href="{% url 'edit_product' product.id %}" aria-label="go to this product's edit page" class="btn btn-primary">Edit</a>
-                <a href="{% url 'delete_product' product.id %}" aria-label="delete this product" class="btn btn-danger">Delete</a>
+                <a href="#" data-toggle="modal" data-target="#confirmRemoveModal" data-item-id="{{ item.id }}" aria-label="remove item" class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></a>
             </div>
             {% endif %}
         </div>
