--- a/catalog/templates/home/products.html
+++ b/catalog/templates/home/products.html
@@ -10,8 +10,8 @@
       <div class="w-30">
         <form id="sort-form" action="{% url 'products' %}" method="GET">
           <div class="form-group">
-            <label for="sort-by">Sort by:</label>
             <select class="form-control" id="sort-by" name="sort" onchange="this.form.submit()">
+              <option value="">--Sort by:--</option>
               <option value="name_asc" {% if request.GET.sort == 'name_asc' %} selected {% endif %}>Name (A-Z)</option>
               <option value="name_desc" {% if request.GET.sort == 'name_desc' %} selected {% endif %}>Name (Z-A)</option>
               <option value="price_asc" {% if request.GET.sort == 'price_asc' %} selected {% endif %}>Price (Low to High)</option>
@@ -19,9 +19,8 @@
               <option value="rating_asc" {% if request.GET.sort == 'rating_asc' %} selected {% endif %}>Rating (Low to High)</option>
               <option value="rating_desc" {% if request.GET.sort == 'rating_desc' %} selected {% endif %}>Rating (High to Low)</option>
             </select>
-            <label for="filter-by">Filter by:</label>
-            <select class="form-control" id="filter-by" name="type" onchange="this.form.submit()">
-              <option value="">All</option>
+            <select class="form-control mt-1" id="filter-by" name="type" onchange="this.form.submit()">
+              <option value="">--Filter by:--</option>
               <option value="candles" {% if request.GET.type == 'candles' %} selected {% endif %}>Candles</option>
               <option value="essential_oils" {% if request.GET.type == 'essential_oils' %} selected {% endif %}>Essential Oils</option>
             </select>
