--- a/static/css/base.css
+++ b/static/css/base.css
@@ -127,6 +127,12 @@ footer a {
     color: white;
 }
 
+.basket-remove {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+}
+
 /* MAILCHIMP */
 
 #mc_embed_signup {
