--- a/checkout/templates/checkout/send_confirmation_email.html
+++ b/checkout/templates/checkout/send_confirmation_email.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <html lang="en">
 
 <head>
@@ -9,7 +10,9 @@
 <body>
     <div class="row">
         <div class="col-12 col-lg-7">
+            <hr>
             <h1>Thank you for your order!</h1>
+            <hr>
             <p>Hi {{ order.first_name }},</p>
             <p>We are pleased to confirm that your order has been received and is being processed.</p>
             <p>Please allow 2-4 working days for your items to be delivered. You will receive a tracking number from the courier.</p>
@@ -17,138 +20,104 @@
             <div class="order-confirmation-wrapper p-2 border">
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Order Info:</small>
+                        <h5 class="text-muted">Order Info:</h5>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Order Number</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.order_number }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Order Number: {{ order.order_number }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Order Date</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.created_at }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Order Date: {{ order.created_at }}</p>
                     </div>
                 </div>
-
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <p><a href="https://liquid-smoke.herokuapp.com/profiles/order_history/" target="_blank" 
+                            aria-label="view order history">View your order history.</a> <small>(Opens in a new tab)</small></p>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Order Details:</small>
+                        <h6 class="text-muted">Order Details:</h6>
                     </div>
                 </div>
-
                 {% for item in order.items.all %}
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="small mb-0 text-black font-weight-bold">
-                            {{ item.product.name }}
-                        </p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
+                            {{ item.product.name }}</p>
                         <p class="small mb-0">{{ item.quantity }} @ ${{ item.product.price }} each</p>
                     </div>
                 </div>
                 {% endfor %}
-
                 <div class="row">
                     <div class="col">
                         <small class="text-muted">Delivering To:</small>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Full Name</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.first_name }} {{ order.last_name }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Full Name: {{ order.first_name }} {{ order.last_name }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Address 1</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.address_line_1 }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Address 1: {{ order.address_line_1 }}</p>
                     </div>
                 </div>
-
                 {% if order.address_line_2 %}
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Address 2</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.address_line_2 }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Address 2: {{ order.address_line_2 }}</p>
                     </div>
                 </div>
                 {% endif %}
-
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Town or City</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.city }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Town or City: {{ order.city }}</p>
                     </div>
                 </div>
-
                 {% if order.postcode %}
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Postal Code</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.postcode }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Postal Code: {{ order.postcode }}</p>
                     </div>
                 </div>
                 {% endif %}
-
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Country</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.country }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Country: {{ order.country }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Phone Number</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">{{ order.phone_number }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Phone Number: {{ order.phone_number }}</p>
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col">
-                        <small class="text-muted">Billing Info:</small>
+                        <h5 class="text-muted">Billing Info:</h5>
                     </div>
                 </div>
-
+                {% if coupon %}
+                <div class="col-12 text-right">
+                    <p>Coupon <strong>{{ coupon }}</strong> applied with <strong>{{ coupon.discount }}%</strong> discount</p>
+                </div>
+                {% endif %}
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black font-weight-bold">Order Total</p>
-                    </div>
-                    <div class="col-12 col-md-8 text-md-right">
-                        <p class="mb-0">${{ order.get_total_cost }}</p>
+                        <p class="mb-0 text-black font-weight-bold">Order Total: ${{ order.get_total_cost }}</p>
                     </div>
                 </div>
             </div>
         </div>
-        <p>Thank you for shopping with us!</p>
-        <p><a href="https://liquid-smoke.herokuapp.com/profiles/order_history/" target="_blank" aria-label="view order history">View your order history.</a> <small>(Opens in a new tab)</small></p>
+        <h6>Thank you for shopping with us!</h6>
+        <hr>
+        <p>Liquid Smoke</p>
+        <hr>
     </div>
 </body>
 </html>
